# hybridpir

./: README.md  build.sh  cargo-config.toml
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/de/tu_darmstadt/cs/encrypto/hybridpir/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/tu_darmstadt/cs/encrypto/hybridpir/: MainActivity.java  RustInterface.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/de/tu_darmstadt/cs/encrypto/hybridpir/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/.cargo/: config
rust/benches/: benchserver.rs  pir.rs
rust/examples/: benchmark_client.rs  benchmark_server.rs  client.rs  server.rs
rust/src/: android.rs  client.rs  lib.rs  server.rs  types.rs
rust/tests/: lib.rs
