[package]
name = "hybridpir"
version = "0.1.0"
authors = ["Felix Wiegand <felix-wiegand@protonmail.ch>"]
edition = "2018"

[lib]
# This needs to be enabled for Android builds, but breaks tests, benchmarks and
# examples. ../build.sh does this, and should comment it back out afterwards
# after building the Android targets.
#
# Cargo doesn't currently allow specifying crate-type depending on the target.
# https://github.com/rust-lang/cargo/issues/4881
#crate-type = ["dylib"]

[dependencies]
log = "0.4"
env_logger = "0.8"
bitvec = "0.19"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
sealpir = { git = "ssh://git@github.com/KoffeinFlummi/sealpir-rust.git", rev = "fe54695" } # TODO: publish as fork of https://github.com/sga001/sealpir-rust
raidpir = { git = "ssh://git@git.rwth-aachen.de/daniel.guenther2/pqp-raid-pir-rust.git", rev = "7431ceb" } # TODO: publish on github
#sealpir = { path = "../../sealpir-rust" }
#raidpir = { path = "../../raidpir" }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.18", default-features = false }
android_log = "0.1"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"

[profile.release]
lto = true

[[bench]]
name = "pir"
harness = false

[[bench]]
name = "benchserver"
harness = false
